# koi-opsradar-lakehouse

./: .gitignore  Dockerfile.dagster  README.md  docker-compose.yml  pyproject.toml
dbt_koi/: dbt_project.yml  profiles.yml
dbt_koi/models/marts/: dim_date.sql  dim_store.sql  fct_reviews.sql
dbt_koi/models/staging/: stg_reviews.sql
src/pipeline/: __init__.py  assets.py
src/scraper/: queries.txt  run_scraper.py
